@@ -4,17 +4,22 @@
   <!ENTITY % general-entities SYSTEM "../../general.ent">
   %general-entities;
 
-  <!--<!ENTITY xorg-intel-driver-version "2.99.917">-->
-  <!ENTITY xorg-intel-driver-version "0340718">
 
   <!--<!ENTITY xorg-intel-driver-download-http "&xorg-download-http;/driver/xf86-video-intel-&xorg-intel-driver-version;.tar.bz2">
   <!ENTITY xorg-intel-driver-download-ftp  "&xorg-download-ftp;/driver/xf86-video-intel-&xorg-intel-driver-version;.tar.bz2">-->
-  <!ENTITY xorg-intel-driver-download-http "&sources-anduin-http;/xf86-video-intel/xf86-video-intel-&xorg-intel-driver-version;.tar.xz">
-  <!ENTITY xorg-intel-driver-download-ftp  "&sources-anduin-ftp;/xf86-video-intel/xf86-video-intel-&xorg-intel-driver-version;.tar.xz">
-  <!ENTITY xorg-intel-driver-md5sum        "e960269189c7d6619712570db38abe7f">
-  <!ENTITY xorg-intel-driver-size          "14 MB">
-  <!ENTITY xorg-intel-driver-buildsize     "86 MB">
-  <!ENTITY xorg-intel-driver-time          "0.7 SBU">
+  
+  <!-- git clone git://anongit.freedesktop.org/xorg/driver/xf86-video-intel
+       as of 2016-09-02 -->
+
+  <!--<!ENTITY xorg-intel-driver-version "2.99.917">-->
+  <!ENTITY xorg-intel-driver-version "20160902">
+
+  <!ENTITY xorg-intel-driver-download-http "&sources-anduin-http;/xf86-video-intel/xf86-video-intel-&xorg-intel-driver-version;.tar.bz2">
+  <!ENTITY xorg-intel-driver-download-ftp  "&sources-anduin-ftp;/xf86-video-intel/xf86-video-intel-&xorg-intel-driver-version;.tar.bz2">
+  <!ENTITY xorg-intel-driver-md5sum        "aff145a655f96761d2ad1935c0d10ab4">
+  <!ENTITY xorg-intel-driver-size          "13 MB">
+  <!ENTITY xorg-intel-driver-buildsize     "88 MB">
+  <!ENTITY xorg-intel-driver-time          "0.6 SBU">
 ]>
 
   <!-- Begin Xorg Intel Driver -->
