@@ -14,9 +14,9 @@
 
 ### BEGIN INIT INFO
 # Provides:          slapd
-# Required-Start:    $remote_fs $network $syslog
-# Required-Stop:     $remote_fs $network $syslog
-# Default-Start:     2 3 4 5
+# Required-Start:    $network $syslog
+# Required-Stop:     $network $syslog
+# Default-Start:     3 4 5
 # Default-Stop:      0 1 6
 # Short-Description: OpenLDAP standalone server
 # X-LFS-Provided-By: BLFS
